--- a/src/app/modules/admin/pages/platforms/components/new-platform-form/new-platform-form.component.html
+++ b/src/app/modules/admin/pages/platforms/components/new-platform-form/new-platform-form.component.html
@@ -9,7 +9,7 @@
     />
     <button
       type="submit"
-      class="bg-purple-600 text-purple-100 text-lg px-6 py-1.5 rounded-xl font-semibold"
+      class="bg-violet-600 text-violet-100 text-lg px-6 py-1.5 rounded-xl font-semibold"
     >
       Registrar
     </button>
