--- a/src/app/modules/admin/pages/users/components/new-user-form/new-user-form.component.html
+++ b/src/app/modules/admin/pages/users/components/new-user-form/new-user-form.component.html
@@ -61,7 +61,7 @@
   </div>
   <button
     type="submit"
-    class="bg-purple-600 text-purple-100 text-lg mt-3 px-6 py-1.5 rounded-xl font-semibold"
+    class="bg-violet-600 text-violet-100 text-lg mt-3 px-6 py-1.5 rounded-xl font-semibold"
   >
     Registrar
   </button>
