--- a/src/app/modules/admin/pages/users/users.component.html
+++ b/src/app/modules/admin/pages/users/users.component.html
@@ -12,7 +12,7 @@
         <app-filter-by-role></app-filter-by-role>
         <button
           type="button"
-          class="bg-purple-600 text-purple-100 text-lg px-6 py-1.5 rounded-xl font-semibold"
+          class="bg-violet-600 text-violet-100 text-lg px-6 py-1.5 rounded-xl font-semibold"
           (click)="toggleShowSideBar()"
         >
           Añadir usuario
