--- a/src/app/modules/shared/components/nav/nav.component.html
+++ b/src/app/modules/shared/components/nav/nav.component.html
@@ -1,5 +1,5 @@
 <nav
-  class="w-56 h-screen fixed px-5 left-0 top-0 bottom-0 bg-purple-900 text-purple-200 flex flex-col justify-between"
+  class="w-56 h-screen fixed px-5 left-0 top-0 bottom-0 bg-violet-900 text-violet-200 flex flex-col justify-between"
 >
   <section>
     <header class="h-16 flex items-center gap-2 mb-5 px-4 py-2">
@@ -10,8 +10,8 @@
       <li *ngFor="let route of routes(); index as i">
         <a
           [routerLink]="route.route"
-          routerLinkActive="bg-purple-700 text-purple-50"
-          class="flex items-center gap-2 px-4 py-2 rounded-xl font-medium hover:bg-purple-700"
+          routerLinkActive="bg-violet-700 text-violet-50"
+          class="flex items-center gap-2 px-4 py-2 rounded-xl font-medium hover:bg-violet-700"
         >
           <img
             [src]="'assets/icons/' + route.icon + '.svg'"
@@ -27,7 +27,7 @@
       <li>
         <a
           (click)="logout()"
-          class="flex items-center gap-2 px-4 py-2 rounded-xl hover:bg-purple-700 cursor-pointer"
+          class="flex items-center gap-2 px-4 py-2 rounded-xl hover:bg-violet-700 cursor-pointer"
         >
           <img src="assets/icons/logout.svg" alt="logout" />
           <span class="text-lg font-medium">Cerrar sesión</span>
