--- a/src/app/modules/portal/pages/home/home.component.html
+++ b/src/app/modules/portal/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<section>
+<section class="mt-6">
   <div class="px-5 pt-5 pb-6 bg-white rounded-lg drop-shadow-lg">
     <h3 class="text-2xl text-gray-700 font-medium mb-3">Nueva transacción</h3>
     <app-new-transaction-form />
