--- a/src/app/modules/portal/pages/my-cash/my-cash.component.html
+++ b/src/app/modules/portal/pages/my-cash/my-cash.component.html
@@ -1,1 +1,43 @@
-<p>my-cash works!</p>
+<ng-container *ngIf="!isOpen()">
+  <app-header-title
+    hTitle="Cajas registradoras"
+    hDescription="Por favor, selecciona la caja que vas a utilizar en el día"
+  ></app-header-title>
+  <section class="flex flex-col gap-5">
+    <header>
+      <h2 class="text-2xl text-gray-700 text-center font-medium mb-3">
+        Listado de cajas
+      </h2>
+    </header>
+    <section class="grid grid-cols-3 place-content-center gap-10 px-10">
+      <article
+        *ngFor="let cashRegister of cashRegisters()"
+        class="card flex flex-col gap-5 items-center"
+      >
+        <header>
+          <h3 class="font-medium text-gray-700 text-2xl">
+            Caja {{ cashRegister.numeral }}
+          </h3>
+        </header>
+        <section>
+          <p class="text-gray-900 text-opacity-85 text-center">
+            {{ cashRegister.description }}
+          </p>
+        </section>
+        <section>
+          <span
+            class="text-lg font-medium"
+            [ngClass]="{
+              'text-green-700': cashRegister.status === 'AVAILABLE',
+              'text-red-700': cashRegister.status === 'OCCUPIED'
+            }"
+            >{{ cashRegister.status | cashRegisterStatus }}</span
+          >
+        </section>
+        <footer class="w-full">
+          <app-button type="button">Abrir caja</app-button>
+        </footer>
+      </article>
+    </section>
+  </section>
+</ng-container>
