--- a/src/styles.css
+++ b/src/styles.css
@@ -34,3 +34,7 @@ input[type="number"],
 select {
   @apply w-full rounded-lg px-4 py-2 border border-gray-300 bg-gray-50 text-gray-700 focus:ring-1 focus:ring-blue-500 focus:border-blue-500 focus:outline-none;
 }
+
+.card {
+  @apply px-5 pt-5 pb-6 bg-white rounded-lg drop-shadow-lg;
+}
