--- a/src/app/modules/portal/pages/my-cash/my-cash.component.html
+++ b/src/app/modules/portal/pages/my-cash/my-cash.component.html
@@ -13,6 +13,7 @@
       <app-cash-register-card
         *ngFor="let cashRegister of cashRegisters()"
         [cashRegister]="cashRegister"
+        (openCash)="openCash()"
       >
       </app-cash-register-card>
     </section>
