--- a/src/app/modules/portal/pages/my-cash/my-cash.component.html
+++ b/src/app/modules/portal/pages/my-cash/my-cash.component.html
@@ -1,22 +1,72 @@
-<ng-container *ngIf="!isOpen()">
-  <app-header-title
-    hTitle="Cajas registradoras"
-    hDescription="Por favor, selecciona la caja que vas a utilizar en el día"
-  ></app-header-title>
+<app-header-title
+  [hTitle]="headerTitle"
+  [hDescription]="headerDescription"
+></app-header-title>
+<ng-container *ngIf="cashRegisterStatus() === 'available'">
   <section class="flex flex-col gap-5">
     <header>
-      <h2 class="text-2xl text-gray-700 text-center font-medium mb-3">
+      <h3 class="text-2xl text-gray-700 text-center font-medium mb-3">
         Listado de cajas
-      </h2>
+      </h3>
     </header>
     <section class="grid grid-cols-3 place-content-center gap-10 px-10">
       <app-cash-register-card
         *ngFor="let cashRegister of cashRegisters()"
         [cashRegister]="cashRegister"
-        (openCash)="openCash()"
+        (openCash)="openCash($event)"
       >
       </app-cash-register-card>
-      <app-modal modalTitle="Abrir caja"></app-modal>
     </section>
+  </section>
+</ng-container>
+<ng-container *ngIf="cashRegisterStatus() === 'opening'">
+  <section class="w-1/2 m-auto" *ngIf="!isCountingBase()">
+    <h3 class="text-2xl text-gray-700 text-center font-medium mb-3">
+      ¿A qué hora entraste?
+    </h3>
+    <form [formGroup]="initialWorkingForm" (ngSubmit)="setInitialWorking()">
+      <div class="control">
+        <label for="initialWorking">Hora de entrada</label>
+        <input
+          type="time"
+          id="initialWorking"
+          formControlName="initialWorking"
+        />
+      </div>
+      <app-button type="submit" class="mt-3"
+        >Registrar hora de entrada</app-button
+      >
+    </form>
+  </section>
+  <h3 class="text-lg text-gray-700 text-center font-medium mb-3">
+    Cuenta o verifica la base inicial para finalizar la apertura de caja.
+  </h3>
+  <section class="w-1/2 m-auto card" *ngIf="isCountingBase()">
+    <h4 class="text-2xl text-gray-700 text-center font-medium mb-5">
+      Base inicial
+    </h4>
+    <form class="">
+      <div
+        class="grid grid-cols-4 place-items-center text-center text-gray-700 font-medium"
+      >
+        <h5>Valor</h5>
+        <h5 class="col-span-2">Cantidad</h5>
+        <h5>Total</h5>
+      </div>
+      <div
+        class="grid grid-cols-4 items-center gap-x-5 text-right text-gray-700"
+      >
+        <label for="oneHundredThousand" class="">{{
+          "100000" | currency : "symbol" : "$" : "0.00"
+        }}</label>
+        <input
+          type="number"
+          id="oneHundredThousand"
+          placeholder="0"
+          class="text-right col-span-2"
+        />
+        <p>{{ "0" | currency : "symbol" : "$" : "0.00" }}</p>
+      </div>
+    </form>
   </section>
 </ng-container>
