--- a/src/app/modules/portal/pages/my-cash/components/base-calculator-form/base-calculator-form.component.html
+++ b/src/app/modules/portal/pages/my-cash/components/base-calculator-form/base-calculator-form.component.html
@@ -1,41 +1,103 @@
-<form class="gap-0 px-5" [formGroup]="baseForm" (ngSubmit)="calculate()">
-  <div
-    class="grid grid-cols-3 items-center gap-5 text-center text-gray-700 font-medium px-5 border-b-2 border-gray-300"
-  >
-    <h4>Denominación</h4>
-    <h4 class="border-l-2 border-r-2 border-gray-300">Cantidad</h4>
-    <h4>Total</h4>
+<app-spinner *ngIf="loading()"></app-spinner>
+<form
+  class="w-full px-5 flex flex-col gap-5"
+  [formGroup]="baseForm"
+  (ngSubmit)="calculate()"
+  *ngIf="!loading()"
+>
+  <div class="flex flex-wrap items-start gap-12">
+    <section class="card max-w-md">
+      <header class="mb-5">
+        <h3 class="text-center text-gray-700 text-xl font-medium">Billete</h3>
+      </header>
+      <div
+        class="grid grid-cols-3 items-center gap-5 text-center text-gray-700 font-medium px-5 border-b-2 border-gray-300"
+      >
+        <h4>Denominación</h4>
+        <h4 class="border-l-2 border-r-2 border-gray-300">Cantidad</h4>
+        <h4>Total</h4>
+      </div>
+      <div
+        class="grid grid-cols-3 items-center gap-5 px-5 text-right border-b-2 border-gray-300"
+        *ngFor="let cash of cashBase().slice(0, 6)"
+      >
+        <label [for]="cash.title" class="font-normal peer">{{
+          cash.value | currency : "Symbol" : "$" : "0.00"
+        }}</label>
+        <input
+          type="text"
+          [id]="cash.title"
+          placeholder="0"
+          class="cash_amount_input"
+          [formControlName]="cash.title"
+        />
+        <span class="text-gray-800">{{
+          cash.total | currency : "Symbol" : "$" : "0.00"
+        }}</span>
+      </div>
+      <div class="grid grid-cols-3 items-center gap-5 text-right px-5">
+        <label for="total" class="">Total</label>
+        <input
+          type="text"
+          id="total"
+          class="cash_amount_input"
+          [value]="billetAmount()"
+          disabled
+        />
+        <span class="text-gray-800 font-medium">{{
+          billetTotal() | currency : "Symbol" : "$" : "0.00"
+        }}</span>
+      </div>
+    </section>
+    <section class="card max-w-md">
+      <header class="mb-5">
+        <h3 class="text-center text-gray-700 text-xl font-medium">Moneda</h3>
+      </header>
+      <div
+        class="grid grid-cols-3 items-center gap-5 text-center text-gray-700 font-medium px-5 border-b-2 border-gray-300"
+      >
+        <h4>Denominación</h4>
+        <h4 class="border-l-2 border-r-2 border-gray-300">Cantidad</h4>
+        <h4>Total</h4>
+      </div>
+      <div
+        class="grid grid-cols-3 items-center gap-5 px-5 text-right border-b-2 border-gray-300"
+        *ngFor="let cash of cashBase().slice(6, 11)"
+      >
+        <label [for]="cash.title" class="font-normal peer">{{
+          cash.value | currency : "Symbol" : "$" : "0.00"
+        }}</label>
+        <input
+          type="text"
+          [id]="cash.title"
+          placeholder="0"
+          class="cash_amount_input"
+          [formControlName]="cash.title"
+        />
+        <span class="text-gray-800">{{
+          cash.total | currency : "Symbol" : "$" : "0.00"
+        }}</span>
+      </div>
+      <div class="grid grid-cols-3 items-center gap-5 text-right px-5">
+        <label for="total" class="">Total</label>
+        <input
+          type="text"
+          id="total"
+          class="cash_amount_input"
+          [value]="coinAmount()"
+          disabled
+        />
+        <span class="text-gray-800 font-medium">{{
+          coinTotal() | currency : "Symbol" : "$" : "0.00"
+        }}</span>
+      </div>
+    </section>
   </div>
-  <div
-    class="grid grid-cols-3 items-center gap-5 px-5 text-right border-b-2 border-gray-300"
-    *ngFor="let cash of cashBase()"
-  >
-    <label [for]="cash.title" class="font-normal peer">{{
-      cash.value | currency : "Symbol" : "$" : "0.00"
-    }}</label>
-    <input
-      type="text"
-      [id]="cash.title"
-      placeholder="0"
-      class="cash_amount_input"
-      [formControlName]="cash.title"
-    />
-    <span class="text-gray-800">{{
-      cash.total | currency : "Symbol" : "$" : "0.00"
-    }}</span>
+  <input type="submit" value="Calcular" class="sr-only" />
+  <div class="w-full flex items-center gap-5">
+    <app-button type="button" class="w-2/6" color="neutral"
+      >Añadir observación</app-button
+    >
+    <app-button type="button" class="w-4/6">Registrar base</app-button>
   </div>
-  <div class="grid grid-cols-3 items-center gap-5 text-right px-5">
-    <label for="total">Total</label>
-    <input
-      type="text"
-      id="total"
-      class="cash_amount_input"
-      [value]="totalAmount()"
-      disabled
-    />
-    <span class="text-gray-800 font-medium">{{
-      total() | currency : "Symbol" : "$" : "0.00"
-    }}</span>
-  </div>
-  <app-button type="submit" class="mt-3">Calcular</app-button>
 </form>
