--- a/src/app/modules/portal/pages/my-cash/my-cash.component.html
+++ b/src/app/modules/portal/pages/my-cash/my-cash.component.html
@@ -23,10 +23,15 @@
     <h3 class="text-2xl text-gray-700 text-center font-medium mb-3">
       ¿A qué hora entraste?
     </h3>
-    <form [formGroup]="initialWorkingForm" (ngSubmit)="setInitialWorking()">
+    <form
+      class="form"
+      [formGroup]="initialWorkingForm"
+      (ngSubmit)="setInitialWorking()"
+    >
       <div class="control">
         <label for="initialWorking">Hora de entrada</label>
         <input
+          class="input"
           type="time"
           id="initialWorking"
           formControlName="initialWorking"
@@ -35,18 +40,10 @@
       <app-button type="submit" class="mt-3">Continuar</app-button>
     </form>
   </section>
-  <section
-    class="max-w-5xl m-auto grid grid-cols-3 gap-5 items-end"
-    *ngIf="isCountingBase()"
-  >
-    <div class="card col-span-2">
-      <header>
-        <h3 class="text-lg text-gray-700 text-center font-medium mb-3">
-          Cuenta o verifica la base inicial para finalizar la apertura de caja.
-        </h3>
-      </header>
-      <app-base-calculator-form (calculateBase)="finish($event)" />
-    </div>
-    <div class="card col-span-1"></div>
+  <section class="flex items-center justify-center" *ngIf="isCountingBase()">
+    <app-base-calculator-form
+      [cashRegisterId]="selectedCashRegister()!.id"
+      (calculateBase)="finish($event)"
+    />
   </section>
 </ng-container>
