--- a/src/app/modules/portal/pages/my-cash/my-cash.component.html
+++ b/src/app/modules/portal/pages/my-cash/my-cash.component.html
@@ -1,53 +1,56 @@
 <app-header-title
-  [hTitle]="headerTitle"
-  [hDescription]="headerDescription"
+  [hTitle]="headerTitle()"
+  [hDescription]="headerDescription()"
 ></app-header-title>
-<ng-container *ngIf="cashRegisterStatus() === 'available'">
-  <section class="flex flex-col gap-5">
-    <header>
+<app-spinner *ngIf="loading(); else body" />
+<ng-template #body>
+  <ng-container *ngIf="cashRegisterStatus() === 'available'">
+    <section class="flex flex-col gap-5">
+      <header>
+        <h3 class="text-2xl text-gray-700 text-center font-medium mb-3">
+          Listado de cajas
+        </h3>
+      </header>
+      <section class="grid grid-cols-3 place-content-center gap-10 px-10">
+        <app-cash-register-card
+          *ngFor="let cashRegister of cashRegisters()"
+          [cashRegister]="cashRegister"
+          (openCash)="openCash($event)"
+        />
+      </section>
+    </section>
+  </ng-container>
+  <ng-container *ngIf="cashRegisterStatus() === 'opening'">
+    <section class="w-1/2 m-auto" *ngIf="!countingBase()">
       <h3 class="text-2xl text-gray-700 text-center font-medium mb-3">
-        Listado de cajas
+        ¿A qué hora entraste?
       </h3>
-    </header>
-    <section class="grid grid-cols-3 place-content-center gap-10 px-10">
-      <app-cash-register-card
-        *ngFor="let cashRegister of cashRegisters()"
-        [cashRegister]="cashRegister"
-        (openCash)="openCash($event)"
+      <form
+        class="form"
+        [formGroup]="initialWorkingForm"
+        (ngSubmit)="setWorkingHours()"
+      >
+        <div class="control">
+          <label for="initialWorking">Hora de entrada</label>
+          <input
+            class="input"
+            type="time"
+            id="initialWorking"
+            formControlName="initialWorking"
+          />
+        </div>
+        <app-button type="submit" class="mt-3">Continuar</app-button>
+      </form>
+    </section>
+    <section class="flex items-center justify-center" *ngIf="countingBase()">
+      <app-spinner *ngIf="registerLoading()"></app-spinner>
+      <app-base-calculator-form
+        *ngIf="!registerLoading()"
+        [cashRegisterId]="selectedCashRegister()!.id"
+        (calculateBase)="setBase($event)"
+        (setObservation)="setObservation($event)"
+        (register)="register()"
       />
     </section>
-  </section>
-</ng-container>
-<ng-container *ngIf="cashRegisterStatus() === 'opening'">
-  <section class="w-1/2 m-auto" *ngIf="!isCountingBase()">
-    <h3 class="text-2xl text-gray-700 text-center font-medium mb-3">
-      ¿A qué hora entraste?
-    </h3>
-    <form
-      class="form"
-      [formGroup]="initialWorkingForm"
-      (ngSubmit)="setWorkingHours()"
-    >
-      <div class="control">
-        <label for="initialWorking">Hora de entrada</label>
-        <input
-          class="input"
-          type="time"
-          id="initialWorking"
-          formControlName="initialWorking"
-        />
-      </div>
-      <app-button type="submit" class="mt-3">Continuar</app-button>
-    </form>
-  </section>
-  <section class="flex items-center justify-center" *ngIf="isCountingBase()">
-    <app-spinner *ngIf="registerLoading()"></app-spinner>
-    <app-base-calculator-form
-      *ngIf="!registerLoading()"
-      [cashRegisterId]="selectedCashRegister()!.id"
-      (calculateBase)="setBase($event)"
-      (setObservation)="setObservation($event)"
-      (register)="register()"
-    />
-  </section>
-</ng-container>
+  </ng-container>
+</ng-template>
