--- a/src/app/modules/portal/pages/cash-registers/my-cash-registers/my-cash-registers.component.html
+++ b/src/app/modules/portal/pages/cash-registers/my-cash-registers/my-cash-registers.component.html
@@ -3,7 +3,7 @@
 >
   <div class="flex items-center justify-between">
     <div class="flex flex-col gap-1">
-      <h3 class="text-gray-800 text-3xl font-medium">
+      <h3 class="text-gray-700 text-3xl font-medium">
         Caja
         {{ selectedCashRegister()?.cashRegisterDetail?.cashRegisterNumeral }}
       </h3>
@@ -92,3 +92,7 @@
     </div>
   </div>
 </header>
+<section class="mt-32 flex items-center justify-center gap-7">
+  <app-button type="button">Tomar descanso</app-button>
+  <app-button type="button">Cerrar caja</app-button>
+</section>
