--- a/src/app/modules/portal/pages/cash-registers/available-cash-registers/components/cash-register-card/cash-register-card.component.html
+++ b/src/app/modules/portal/pages/cash-registers/available-cash-registers/components/cash-register-card/cash-register-card.component.html
@@ -14,6 +14,7 @@
       class="text-lg font-medium"
       [ngClass]="{
         'text-green-700': cashRegister.status === 'AVAILABLE',
+        'text-yellow-700': cashRegister.status === 'RESTING',
         'text-red-700': cashRegister.status === 'OCCUPIED'
       }"
       >{{ cashRegister.status | cashRegisterStatus }}</span
