--- a/src/app/modules/portal/pages/cash-registers/my-cash-registers/my-cash-registers.component.html
+++ b/src/app/modules/portal/pages/cash-registers/my-cash-registers/my-cash-registers.component.html
@@ -5,7 +5,7 @@
     <div class="flex flex-col gap-1">
       <h3 class="text-gray-700 text-3xl font-medium">
         Caja
-        {{ selectedCashRegister()?.cashRegisterDetail?.cashRegisterNumeral }}
+        {{ selectedCashRegister()?.cashRegisterDetail?.cashRegister?.numeral }}
       </h3>
       <div class="text-gray-700 flex items-center gap-7">
         <p>
@@ -51,7 +51,7 @@
             index as i
           "
         >
-          Caja {{ report.cashRegisterDetail.cashRegisterNumeral }}
+          Caja {{ report.cashRegisterDetail.cashRegister.numeral }}
         </option>
         <option
           value="all"
@@ -93,6 +93,12 @@
   </div>
 </header>
 <section class="mt-32 flex items-center justify-center gap-7">
-  <app-button type="button">Tomar descanso</app-button>
+  <app-button
+    type="button"
+    [loading]="breakLoading()"
+    (click)="handleTakeBreak()"
+    *ngIf="selectedCashRegisterBreakTitle() !== ''"
+    >{{ selectedCashRegisterBreakTitle() }}</app-button
+  >
   <app-button type="button">Cerrar caja</app-button>
 </section>
