--- a/src/app/modules/shared/components/header/header.component.html
+++ b/src/app/modules/shared/components/header/header.component.html
@@ -1,19 +1,22 @@
 <header
-  class="w-full h-16 sticky left-0 top-0 right-0 z-40 px-5 bg-violet-900 text-violet-200 drop-shadow-xl flex items-center"
+  class="w-full h-16 sticky left-0 top-0 right-0 z-40 px-5 bg-violet-800 drop-shadow-xl flex items-center"
 >
-  <ul class="flex items-center justify-between w-full">
+  <ul class="flex items-center justify-between w-full text-gray-300">
     <li class="flex items-center gap-2 px-4 py-2">
-      <img src="assets/icons/computer.svg" alt="computer" />
+      <fa-icon [icon]="faComputer" />
       <h1 class="text-xl font-semibold">Servinet</h1>
     </li>
     <li>
-      <button class="px-4 py-2 flex items-center gap-3 ms-auto">
-        <img src="assets/icons/account.svg" alt="profile" />
-        <span class="font-medium"
-          >ID {{ loggedIn()?.id }} - {{ loggedIn()?.name }}
-          {{ loggedIn()?.lastName }}</span
-        >
-        <img src="assets/icons/expand_more.svg" alt="more" />
+      <button
+        class="px-4 py-2 flex items-center gap-3 ms-auto text-gray-200"
+        style="text-shadow: 0 0 1px rgb(17, 24, 39)"
+      >
+        <fa-icon [icon]="faAccount" />
+        <span class="font-medium">
+          ID {{ loggedIn()?.id }} - {{ loggedIn()?.name }}
+          {{ loggedIn()?.lastName }}
+        </span>
+        <fa-icon [icon]="faExpand" />
       </button>
     </li>
   </ul>
