--- a/src/app/modules/portal/pages/home/home.component.html
+++ b/src/app/modules/portal/pages/home/home.component.html
@@ -1,16 +1,25 @@
-<article class="mt-5 grid grid-cols-2 gap-5">
-  <section class="px-5 pt-5 pb-6 bg-white rounded-lg drop-shadow-lg">
-    <h3 class="text-2xl text-gray-700 font-medium mb-3">Nueva transacción</h3>
-    <app-new-transaction-form />
-  </section>
-  <section class="px-5 pt-5 pb-6 bg-white rounded-lg drop-shadow-lg">
-    <h3 class="text-2xl text-gray-700 font-medium mb-3">Nuevo gasto</h3>
-    <app-new-expense-form />
-  </section>
-  <section class="px-5 pt-5 pb-6 bg-white rounded-lg drop-shadow-lg">
-    <h3 class="text-2xl text-gray-700 font-medium mb-3">
-      Transferencia entre cajas registradoras
-    </h3>
-    <app-new-cash-register-transfer-form />
-  </section>
-</article>
+<section
+  *ngIf="!open()"
+  class="h-[calc(100vh-4rem)] flex items-center justify-center"
+>
+  <div class="">
+    <h2 class="mb-3 text-3xl text-gray-700 font-medium">
+      Parece no tienes cajas
+    </h2>
+    <p class="mb-5 text-lg text-gray-700">
+      Abre una caja registradora para hacer transacciones
+    </p>
+    <app-button type="button" (click)="goToOpenCash()">Abrir caja</app-button>
+  </div>
+</section>
+<nav>
+  <ul>
+    <li>
+      <a>Transacciones</a>
+    </li>
+    <li>
+      <a>Gastos</a>
+    </li>
+    <li><a>Transferencias</a></li>
+  </ul>
+</nav>
