--- a/src/app/modules/shared/components/button/button.component.html
+++ b/src/app/modules/shared/components/button/button.component.html
@@ -1,5 +1,5 @@
 <button
-  class="w-full flex items-center justify-center gap-1.5 text-lg px-6 py-1.5 rounded-xl font-semibold focus:outline-none focus:ring-4 disabled:opacity-95"
+  class="w-full flex items-center justify-center gap-1.5 text-lg px-6 py-1.5 rounded-xl font-semibold focus:outline-none focus:ring-4 disabled:opacity-95 drop-shadow-lg"
   [ngClass]="getColor"
   [type]="type"
   [disabled]="disabled || loading"
