--- a/src/app/modules/portal/pages/home/home.component.html
+++ b/src/app/modules/portal/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <section
-  *ngIf="!open()"
+  *ngIf="!open(); else home"
   class="h-[calc(100vh-4rem)] flex items-center justify-center"
 >
   <div class="">
@@ -12,14 +12,16 @@
     <app-button type="button" (click)="goToOpenCash()">Abrir caja</app-button>
   </div>
 </section>
-<nav>
-  <ul>
-    <li>
-      <a>Transacciones</a>
-    </li>
-    <li>
-      <a>Gastos</a>
-    </li>
-    <li><a>Transferencias</a></li>
-  </ul>
-</nav>
+<ng-template #home>
+  <nav>
+    <ul>
+      <li>
+        <a>Transacciones</a>
+      </li>
+      <li>
+        <a>Gastos</a>
+      </li>
+      <li><a>Transferencias</a></li>
+    </ul>
+  </nav>
+</ng-template>
